<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/file_info_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:animateLayoutChanges="true"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin">
  <TableLayout
    android:id="@+id/file_buttons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1"
    android:shrinkColumns="0">

    <TableRow
      android:id="@+id/table_header"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="5dip" >
      <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        >
        <TextView
          android:id="@+id/filename_editText"
          android:textSize="20sp"
          android:layout_width="300dp"
          android:layout_height="wrap_content"
          android:maxLength="200"
          android:text="@string/filename_editText">
        </TextView>
        <LinearLayout
          android:id="@+id/horizontalButtons"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >
          <Button
            android:id="@+id/file_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"
            android:textSize="16sp"
            android:text="@string/file_edit_button"
            android:onClick="file_edit_button"/>

          <Button
            android:id="@+id/file_activate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"
            android:textSize="16sp"
            android:text="@string/file_activate_button"
            android:onClick="file_activate_button"/>

          <Button
            android:id="@+id/file_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"
            android:textSize="16sp"
            android:text="@string/file_delete_button"
            android:onClick="file_delete_button"/>
        </LinearLayout>
      </LinearLayout>
    </TableRow>
  </TableLayout>
  <ListView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/controllers"/>
</LinearLayout>
